objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Customer_Attended_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Attended Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Comment__c</fullName>
        <label>Customer Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Outcome__c</fullName>
        <label>Customer Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5-Very Good</fullName>
                </value>
                <value>
                    <fullName>4-Good</fullName>
                </value>
                <value>
                    <fullName>3-Fair</fullName>
                </value>
                <value>
                    <fullName>2-Poor</fullName>
                </value>
                <value>
                    <fullName>1-Very Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitation_Sent_Date__c</fullName>
        <label>Invitation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invitation Sent</fullName>
                </value>
                <value>
                    <fullName>Invitation Declined</fullName>
                </value>
                <value>
                    <fullName>RSVP Completed</fullName>
                </value>
                <value>
                    <fullName>Attended Event</fullName>
                </value>
                <value>
                    <fullName>Did Not Attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSVP_By_Date__c</fullName>
        <label>RSVP By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSVP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSVP Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSVP_Received_Date__c</fullName>
        <label>RSVP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>et4ae5__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Event_Campaign_Member</fullName>
        <active>true</active>
        <label>Miembro de la campaña de eventos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Member</fullName>
        <active>true</active>
        <label>Miembro de la Campaña Candidato</label>
    </recordTypes>
</CustomObject>